# simple-cvae

./: .gitignore  LICENSE  cvae_eval.py  cvae_train.py  pyproject.toml
src/cvae/: __init__.py  convert.py  cvae.py  evaluation.py  generator.py  schema.py  trainer.py
tests/: test_converters.py  test_schema.py
